--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,8 @@
 	padding: 0;
 }
 body{
-
+	background-color: #eeeeee;
 	padding: 25px 150px 20px 150px;
-	background: radial-gradient(circle closest-corner at 60% 50%, #fefefe, #eeeeee);
 }
 
 
@@ -40,7 +39,7 @@ select {
 }
 
 .header {
-
+	background: radial-gradient(circle closest-side at 70% 45%, #fefefe, #eeeeee);
 }
 .header__title, .header__nav {
 	display: inline-block;
@@ -246,9 +245,68 @@ select {
 	font-weight: 400;
 	margin-bottom: 20px;
 }
-
-
-
+.section__form {
+	width: 580px;
+	margin: 40px auto 0 auto;
+	font-size: 0;
+}
+.form__email {
+	display: inline-block;
+	padding-left: 47px;
+	background-color: white;
+	background-image: url(../imgs/letter.png);
+	background-repeat: no-repeat;
+	background-size: 14px 11px;
+	background-position: 20px 17px;
+	min-height: 45px;
+	width: 410px;
+	border-radius: 30px 0 0 30px;
+}
+.form__email-input {
+	width: 100%;
+	display: block;
+	border: none;
+	background: white;
+	outline: none;
+	min-height: 45px;
+	line-height: 45px;
+	font-weight: 500;
+	font-family: Raleway, sans-serif;
+	font-size: 13px;
+	font-style: italic;
+	color: #3c4955;
+}
+.form__button {
+	position: relative;
+	display: inline-block;
+	background-color: #e10011;
+	min-height: 45px;
+	width: 165px;
+	padding: 17px 0 0 35px;
+	vertical-align: top;
+	font-size: 12px;
+	border-radius: 0 30px 30px 0;
+}
+.form__button-input {
+	background-color: transparent;
+	color: white;
+	border: none;
+	font-family: Raleway, sans-serif;
+	font-weight: 600;
+}
+/* Не вставляется треугольник после текста в кнопке. Брал свойства из фолиака. */
+.form__button-input:after {
+	border: solid transparent;
+	content: " ";
+	height: 0px;
+	width: 0px;
+	display: inline-block;
+	position: absolute;
+	pointer-events: none;
+	border-left-color: white;
+	border-width: 6px;
+	z-index: 2;
+}
 .footer {
 	padding: 20px 0;
 }
@@ -260,12 +318,17 @@ select {
 }
 .footer__links a {
 	display: inline-block;
+	border-radius: 50%;
 	height: 60px;
 	width: 60px;
 	margin-left: 15px;
 }
 .footer__links a:first-child {
 	margin-left: 0;
+}
+.footer__links a:hover {
+	box-shadow: 0 0 15px rgba(0, 0, 0, 0.7);
+	transform: scale(1.1);
 }
 .footer__text {
 	text-align: center;
